2014-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c (open_SSL_connection, ovas_scanner_context_new): Don't
	call openvas_SSL_init anymore because it is already initialized by main
	process and does not need initialization again.
	(openvas_SSL_init): Drop the prevention to not execute gnutls_global_init
	twice because this function is called once only anyway.

2014-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c (log_message_gnutls): New callback function for
	DEBUG_SSL.
	(openvas_SSL_init): Added gnutls debugging for DEBUG_SSL.

2014-07-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c: Use OVAS_CONNECTION_FROM_FD() macro instead of
	accessing the connections array directly.

2014-07-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/arglists.h (struct arglist): Reorder struct elements to reduce
	space wasted on struct memory alignment. Reduces structure size from 48
	to 40 on x64.

2014-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/cvss.c (toenum): Also accept "AU" as "Au".

2014-06-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	More elegant setting of constant _HAVE_LIBSSH.

	* nasl/nasl_init.c (init_nasl_library): Removed explicit adding
	of _HAVE_LIBSSH.
	(libivars): Added _HAVE_LIBSSH to this list.

2014-06-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_init.c (init_nasl_library): Re-add setting the NASL variable
	_HAVE_LIBSSH in order to keep compatiblity until OpenVAS-7 expires.
	Also fix typo about function name.

2014-06-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Remove the g_strescape of the
	result text because it will be converted to UTF-8.  And do the UTF-8
	conversion here, because it was moved out of nsend in r18531 (because
	nsend is also used to send internal messages).

2014-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>
