@@ -1,3 +1,8 @@
+2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_socket.c (nasl_close_socket): Adjust check for file
+	descriptor value. Update documentation to explain rationale.
+
 2014-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* misc/network.c (open_SSL_connection, ovas_scanner_context_new): Don't
